--- a/DashBoard/templates/dashboard.html
+++ b/DashBoard/templates/dashboard.html
@@ -5,6 +5,10 @@
 
 {% block content %}
 
+<!-- Estos botones están en las templates de la app News porque es la 
+que tiene la página de portada 'home' -->
+{% include 'includes/_botones_cabecera.html' %}
+
 <!-- Mis estilos -->
 <link rel="stylesheet" type="text/css" href="{% static 'css/estilos_dashboard.css' %}">
 
