--- a/News/templates/home.html
+++ b/News/templates/home.html
@@ -5,8 +5,9 @@
 
 {% block content %}
 
-<main class="container py-5">
+{% include 'includes/_botones_cabecera.html' %}
 
+<main class="container py-5">
     <!-- Carrusel de noticias -->
     <div id="newsCarousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
