--- a/static/css/estilos_lab.css
+++ b/static/css/estilos_lab.css
@@ -5,3 +5,15 @@
     font-family: 'Arial', sans-serif; 
     text-align: center;
 }
+
+.barra {
+    background-color: #212428; 
+    color: #FFFEFE;
+    font-size: 18px;
+    font-family: 'Arial', sans-serif; 
+    padding-left: 20px;
+}
+
+.ocultos {
+    display: none;
+}
