--- a/Lab/templates/arima.html
+++ b/Lab/templates/arima.html
@@ -1,71 +1,117 @@
-<!-- templates/arima.html -->
 {% extends 'base.html' %}
 
 {% load static %}
 
 {% block content %}
 
-<!-- Mis estilos -->
 <link rel="stylesheet" type="text/css" href="{% static 'css/estilos_lab.css' %}">
 
-<P class="barra">ARIMA</P>
+<br>
+<P class="cabecera">ARIMA</P>
 
-<div id="arima">
-    
-    <!-- Sólo se muestra la comparación en caso de haberla realizado -->
+<div class="col-md-6 offset-md-3 mt-5">
+  <div id="arima">
+
+    <form method="POST" class="card card-body">
+
+      <p style="color: red;">{{ msg_error }}</p>
+
+      {% csrf_token %}
+
+      <input type="hidden" id="ticker_a_buscar" name="ticker_a_buscar" value="">
+
+      <div class="ui-widget">
+        <label for="ticker_autocomplete"></label>
+        <input id="ticker_autocomplete" class="form-control" placeholder="Buscador de tickers">
+      </div>
+
+      <!-- No uso {{ form.as_p }} para poder dar los estilos deseados -->
+      <div class="form-group">
+        <!-- num_sesiones -->
+        <label for="{{ form.num_sesiones.id_for_label }}" class="sr-only"></label>
+        {{ form.num_sesiones }}
+      </div>
+
+      <div class="form-group">
+        <!-- porcentaje_entrenamiento -->
+        <label for="{{ form.porcentaje_entrenamiento.id_for_label }}" class="sr-only"></label>
+        {{ form.porcentaje_entrenamiento }}
+        <br>
+      </div>
+
+      <button type="submit" class="btn btn-dark" style="width: 50%; text-align: center; margin: auto;">Estimar</button><br>
+    </form>
+    <br>
+
     {% if forecast_arima %}
-    <div class="image-container" id="estimar_valores" >
-        <img src="data:image/png;base64,{{ forecast_arima }}" alt="ImagenForecastArima" class="responsive-image">
+      <div style="text-align: center;">
+        <div>
+          <pre style="text-align: left;">
+            {{ resumen }}
+          </pre>
+        </div>
+        <div class="image-container" id="forecast_arima">
+          <img src="data:image/png;base64,{{ forecast_arima }}" alt="ImagenForecastArima" class="responsive-image">
+        </div>
+        <p>Error cuadrático medio (mse) en datos de test:           {{ mse }}</p>
+        <p>Raíz del error cuadrático medio (rmse) en datos de test: {{ rmse }}</p>
+        <p>Predicción para la próxima sesión:                       {{ prediccion_prox_sesion }}</p>
+        <p>En los datos de test se acierta tendencia:               {{ aciertos_tendencia }} veces</p>
+        <p>En los datos de test se falla tendencia:               {{ fallos_tendencia }} veces</p>
     </div>
     {% endif %}
 
-    <form method="POST" class="card card-body">
-        
-        <!-- Sólo se muestra mensaje de error en caso de que 
-            no exista el ticker introducido -->
-        <p style="color: red;">{{ msg_error }}</p>
-
-        {% csrf_token %}
-        
-        <!-- El ticker no va en el formulario porque así puedo
-        usar un cuadro de búsqueda autocompletable.
-        Además, añado un input oculto para que se reconozca bien el 
-        ticker al recoger el dato con POST.get() -->
-        <input type="hidden" id="ticker_a_buscar" name="ticker_a_buscar" value="">
-        <div class="ui-widget">
-            <label for="ticker_a_buscar"></label>
-            <input id="ticker_autocomplete" class="form-control" placeholder="Buscador de tickers">
-        </div>
-
-        <!-- En este formulario, realmente, sólo van 'num_acciones' y
-        'precio_compra'. Pero así puedo adaptar y mejorar el resto de
-        campos de entrada -->                
-        {{ form.as_p }}
-        
-        <br><button type="submit" class="btn btn-dark" style="width: 50%; text-align: center; margin: auto;">Estimar</button><br>
-    </form>
+  </div>
 </div>
 
-<!-- Para la caja de búsqueda con sugerencias -->
 <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
 <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+<link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css" />
+<style>
+  /* Limit height of autocomplete suggestions */
+  .ui-autocomplete {
+    max-height: 200px;
+    overflow-y: auto;
+    overflow-x: hidden;
+    border: 1px solid #ccc;
+  }
+</style>
 <script>
-    $( function() {
-        var tickersDisponibles = {{ lista_tickers|safe }};
-        $("#ticker_autocomplete").autocomplete({
-            source: tickersDisponibles,
-            select: function (event, ui) {
-                // Valores del input visible
-                $("#ticker_autocomplete").val(ui.item.value);
-                
-                // Valores del input oculto
-                $("#ticker_a_buscar").val(ui.item.value);
-                
-                return false;
-            }
-        });
-    } );
 
+  // Para el cuadro de búsqueda de tickers
+  $(function() {
+    var tickersDisponibles = {{ lista_tickers|safe }};
+    $("#ticker_autocomplete").autocomplete({
+      source: tickersDisponibles,
+      minLength: 0,
+      delay: 300,
+      select: function(event, ui) {
+        // Set visible input value
+        $("#ticker_autocomplete").val(ui.item.value);
+        // Set hidden input value
+        $("#ticker_a_buscar").val(ui.item.value);
+        return false;
+      },
+      open: function(event, ui) {
+        // Limit number of suggestions (optional)
+        var menu = $(this).autocomplete("widget");
+        menu.element.attr("size", 5);
+      }
+    });
+  });
+
+  // Para el selector predefinido de % de datos de entrenamiento
+  $(function() {
+    var porcentajeEntrenamientoChoices = ['50%', '66%', '70%', '80%', '90%'];
+
+    $("#id_porcentaje_entrenamiento").autocomplete({
+      source: porcentajeEntrenamientoChoices,
+      minLength: 0,
+      delay: 300
+    }).focus(function() {
+      $(this).autocomplete("search", "");
+    });
+  });
 </script>
 
 {% endblock %}
