--- a/Lab/templates/lab.html
+++ b/Lab/templates/lab.html
@@ -21,8 +21,37 @@ que tiene la página de portada 'home' -->
     <div class="col">
       <button onclick="mostrarOcultos()">ARIMA</button>
       <div id="ocultos" class="ocultos">
-        <button>Button 2</button>
-        <button>Button 3</button>
+        <br>
+        <div>
+          <a href="/lab/arima_parametros_usuario">
+            <button class="boton-modelo">Parámetros (p, d, q) introducidos por usuario</button>
+          </a>
+          <div class="ayuda"> 
+            <img class="icono-ayuda" src="{% static 'icons/help.svg' %}" alt="HelpIcon" width="25" height="25">
+            <span class="mensaje-ayuda">Si conoces los parámetros (p, d, q) que quieres utilizar, porque ajustan un modelo para un stock que conoces bien, este es tu sitio.</span>
+          </div>
+        </div>
+        <br>
+        <div>
+          <a href="/lab/arima_parametros_auto">
+            <button class="boton-modelo">Parámetros (p, d, q) estimados automáticamente</button>
+          </a>
+          <div class="ayuda"> 
+            <img class="icono-ayuda" src="{% static 'icons/help.svg' %}" alt="HelpIcon" width="25" height="25">
+            <span class="mensaje-ayuda">Los parámetros (p,d,q) se estimarán con 'auto_arima' de 'pmdarima.arima'. Los resultados pueden ser malos, pero es muy rápido. </span>
+          </div>
+        </div>
+        <br>
+        <div>
+          <a href="/lab/arima_parametros_rejilla">
+            <button class="boton-modelo">Parámetros (p, d, q) creados con búsqueda por rejilla</button>
+          </a>
+          <div class="ayuda"> 
+            <img class="icono-ayuda" src="{% static 'icons/help.svg' %}" alt="HelpIcon" width="25" height="25">
+            <span class="mensaje-ayuda">Tendrás que definir una rejilla de búsqueda para los parámetros (p, d, q) en la siguiente ventana. Este proceso de búsqueda por rejilla es lento, pero puede merecer la pena. Para eso experimentamos ¿verdad?</span>
+          </div>
+        </div>
+        <br>
       </div>
     
     </div>
@@ -30,14 +59,14 @@ que tiene la página de portada 'home' -->
       <a href="/lab/lstm"><button>LSTM</button></a>
     </div>
   </div>
-  <div class="row">
+  <!-- <div class="row">
     <div class="col">
       <a href="/lab/fbprophet"><button>FBPROPHET</button></a>
     </div>
     <div class="col">
       <a href="/lab/loquesea"><button>LOQUESEA</button></a>
     </div>
-  </div>
+  </div> -->
   <br>
 </div>
 
