--- a/Lab/templates/lab.html
+++ b/Lab/templates/lab.html
@@ -23,7 +23,7 @@ que tiene la página de portada 'home' -->
       <div id="ocultos" class="ocultos">
         <br>
         <div>
-          <a href="/lab/arima_parametros_usuario">
+          <a href="/lab/arima_manual">
             <button class="boton-modelo">Parámetros (p, d, q) introducidos por usuario</button>
           </a>
           <div class="ayuda"> 
@@ -33,7 +33,7 @@ que tiene la página de portada 'home' -->
         </div>
         <br>
         <div>
-          <a href="/lab/arima_parametros_auto">
+          <a href="/lab/arima_auto">
             <button class="boton-modelo">Parámetros (p, d, q) estimados automáticamente</button>
           </a>
           <div class="ayuda"> 
@@ -43,7 +43,7 @@ que tiene la página de portada 'home' -->
         </div>
         <br>
         <div>
-          <a href="/lab/arima_parametros_rejilla">
+          <a href="/lab/arima_rejilla">
             <button class="boton-modelo">Parámetros (p, d, q) creados con búsqueda por rejilla</button>
           </a>
           <div class="ayuda"> 
