Mejoras en los tests de Lab

--- a/Lab/templates/lstm.html
+++ b/Lab/templates/lstm.html
@@ -10,7 +10,7 @@
 <P class="cabecera">LSTM</P>
 
 <div class="col-md-6 offset-md-3 mt-5">
-  <div id="arima_auto">
+  <div id="lstm">
 
     <form method="POST" action="{% url 'lstm' %}" class="card card-body">
       <p style="color: red;">{{ msg_error }}</p>
