Mejoras en el footer

--- a/Analysis/templates/base.html
+++ b/Analysis/templates/base.html
@@ -92,15 +92,54 @@
     </main>
 
     {% block footer %}
-    <footer class="footer mt-auto py-3 bg-dark text-white">
+    <footer class="footer mt-auto py-3 bg-dark text-white align-items-center">
     <div class="container text-center">
         <a href="https://github.com/rmt0009alu/FAT">
             <img src="{% static 'icons/github.svg' %}" alt="GitHub Logo" width="40" height="40">
         </a>
         <br><br>
-        <p class="mb-0">Designed with <i class="bi bi-heart-fill text-danger">Django</i> by Rodrigo Merino Tovar</p>
+        <p class="mb-0">Designed by Rodrigo Merino Tovar</p>
         <p>&copy; 2024 FAT</p>
-    </div>
+
+        <br>
+        <div class="grid-container">
+            <a href="https://www.djangoproject.com/">
+                <img src="{% static 'icons/django.svg' %}" alt="Django Logo" width="40" height="40">
+            </a>
+            <a href="https://www.sqlite.org/index.html">
+                <img src="{% static 'icons/sqlite.svg' %}" alt="SQLite Logo" width="40" height="40">
+            </a>
+            <a href="https://getbootstrap.com/">
+                <img src="{% static 'icons/bootstrap.svg' %}" alt="Bootstrap Logo" width="40" height="40">
+            </a>
+            <a href="https://es.wikipedia.org/wiki/HTML">
+                <img src="{% static 'icons/html.svg' %}" alt="HTML Logo" width="40" height="40">
+            </a>
+            <a href="https://es.wikipedia.org/wiki/CSS">
+                <img src="{% static 'icons/css.svg' %}" alt="CSS Logo" width="40" height="40">
+            </a>
+            <a href="https://es.wikipedia.org/wiki/JavaScript">
+                <img src="{% static 'icons/javascript.svg' %}" alt="JS Logo" width="40" height="40">
+            </a>
+            <a href="https://finance.yahoo.com/">
+                <img src="{% static 'icons/yahoo.svg' %}" alt="Yahoo Finance Logo" width="40" height="40">
+            </a>
+            <a href="https://scikit-learn.org/stable/index.html">
+                <img src="{% static 'icons/scikitlearn.svg' %}" alt="Scikit-learn Logo" width="40" height="40">
+            </a>
+            <a href="https://www.tensorflow.org/">
+                <img src="{% static 'icons/tensorflow.svg' %}" alt="TensorFlow Logo" width="40" height="40">
+            </a>
+            <a href="https://keras.io/">
+                <img src="{% static 'icons/keras.svg' %}" alt="Keras Logo" width="40" height="40">
+            </a>
+            <a href="https://matplotlib.org/">
+                <img src="{% static 'icons/matplotlib.svg' %}" alt="Matplotlib Logo" width="40" height="40">
+            </a>
+            <a href="https://networkx.org/">
+                <img src="{% static 'icons/networkx.svg' %}" alt="NetworkX Logo" width="40" height="40">
+            </a>
+        </div>
     </footer>
     {% endblock %}
 
