--- a/static/css/estilos_base.css
+++ b/static/css/estilos_base.css
@@ -27,3 +27,21 @@ main {
 .boton-indice-cabecera:hover {
     opacity: 0.8
 }
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 30px;
+    width: 50%;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.grid-container a {
+    text-align: center;
+}
+
+.grid-container img {
+    display: block;
+    margin: 0 auto;
+}
